# price_checker_bot

./: bot.py  db.py  main.py  prices.db  pyproject.toml  requirements.txt  scheduler.py  scraper.py  test_scrape.py  utils.py
